# poetry_conflict_all_priorities

./: README.md  autotest_config.json  pyproject.toml
