[tool.poetry]
name = "test-poetry-all-conflict"
version = "0.1.0"
description = "Poetry all priorities conflict"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
Django = "2.2.0"
flask = "2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
